fix: compatibilidade Java 8 e correções de build